<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="120dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/tv_bahasa_pemrograman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@+id/iv_logo"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/bahasa_pemrograman"
                android:textColor="@color/grey_tua"
                android:textSize="11sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_deskripsi"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_bahasa_pemrograman"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@+id/iv_logo"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/deskripsi"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/grey_muda"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_detail"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="@color/grey_agak_putih"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/detail"
                android:textAllCaps="false"
                android:textColor="@color/grey_muda"
                android:textSize="12sp"
                android:textStyle="bold"
                app:backgroundTint="@color/grey_agak_putih" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>